Round out tests and clean up

--- a/tests/client.html
+++ b/tests/client.html
@@ -1,8 +1,12 @@
 <template name="test_helper_home">
+
   <link rel="stylesheet" href="client.css" media="screen">
-  <div id="asdf">
+
+  <div id="container">
     <div class="bourbon-import-builtin-box-sizing">
       Test
     </div>
+    <button class="button"></button>
   </div>
+
 </template>
